--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "connect-mongodb-session": "^3.1.1",
     "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
+    "fabric": "^4.6.0",
     "helmet": "^4.6.0",
     "mongoose": "^6.0.13",
     "nodemailer": "^6.7.1",
