Create menu page, filter dishes, single dish page

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.8.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "crypto-js": "^4.1.1",
